--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -6,11 +6,23 @@
 
 <h2>Reviews</h2>
 <% @restaurant.reviews.each do |review| %>
-<p><%= review.content %></p>
+<p><%= review.content %> <%= link_to "Elininar review",
+              review_path(review),
+              method: :delete,
+              data: { confirm: "Are you sure?" }  %></p>
 <% end %>
 
 
 <%= link_to "home", restaurants_path %> ||
 <%= link_to "Editar restaurant", edit_restaurant_path %> ||
 <%= link_to "Ver Chef", chef_restaurant_path %> ||
-<%= link_to "Deja un review", new_restaurant_review_path(@restaurant) %>
+<%= link_to "Deja un review", new_restaurant_review_path(@restaurant) %> ||
+<%= link_to "Delete #{@restaurant.name}",
+            restaurant_path(@restaurant),
+            method: :delete,
+            data: { confirm: "Are you sure?" } %>
+
+<%= simple_form_for([ @restaurant, @review ]) do |f| %>
+  <%= f.input :content, as: :text %>
+  <%= f.button :submit %>
+<% end %>
